src/styles/Post.css
.Post {
  width: 80%;
  padding: 10px;

  border-radius: 15px;
  background-color: white;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

/* First Major Component Of Post */
.PostInfo {
  height: 100%;
  padding: 5px;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.postInfo-main {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: stretch;

  height: 50px;
}
.postInfo-main-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.postInfo-description {
  padding-top: 10px;
  width: 100%;
  text-align: left;
}
.postInfo-interactivity {
  padding-top: 10px;
  width: 100%;

  font-size: 12.5px;
  color: var(--fb-grey-text);

  display: flex;
  justify-content: space-between;
  align-items: center;
}
.interactivity-likes-icon {
  color: var(--fb-blue);
}

.postInfo-main-user img {
  width: 50px;
  height: auto;

  border-radius: 50%;
  border: solid 1px rgba(99, 99, 99, 0.2);
}
.details-username {
  font-weight: bolder;
}

.postInfo-main-details {
  font-size: 15px;
  margin-right: auto;
  padding-left: 15px;
}
.details-main-username {
  font-weight: bolder;
}

.postInfo-main-editPost {
  padding-right: 15px;
}

.editPost-btn {
  padding: 5px 10px 5px 10px;
  border-radius: 30%;
  cursor: pointer;
  border: none;
  background-color: white;
}
.editPost-btn:hover {
  background-color: var(--fb-grey-hover);
}

/* SECOND MAJOR POST COMPONENT */

.PostNavbar {
  margin: 2.5px 0 10px 0;
  border-top: solid 2px rgb(205, 208, 212);
  border-bottom: solid 2px rgb(205, 208, 212);

  display: flex;
  justify-content: space-around;
}

.postNavbar-item {
  flex: 1;
  display: block;

  padding: 5px 0px 5px 0px;

  text-align: center;
  cursor: pointer;

  color: rgb(101, 109, 119);
}
.postNavbar-item:hover {
  background-color: var(--fb-grey-hover);
}

/* THIRD MAJOR POST SUB COMPONENT */
.PostComments {
}

.Comment {
}

.comment-main {
  display: flex;
  align-items: center;
  padding: 10px 10px 0 10px;
}
.comment-icon {
  display: block;
  margin-right: 10px;
}
.comment-icon img {
  width: 40px;
  height: auto;

  border-radius: 50%;
  border: solid 1px rgba(99, 99, 99, 0.2);
}

.comment-description-user {
  font-size: 15px;
  font-weight: bolder;
}

/*  */
.comment-interaction {
  font-size: 12.5px;
  display: flex;
  justify-content: space-between;
}

.comment-interaction-like {
  color: var(--fb-grey-text);

  padding-bottom: 10px;
  padding-left: 70px;
  cursor: pointer;
}
.comment-interaction-result {
  padding-right: 15px;

  display: flex;
  align-items: center;
  gap: 5px;
}

.result-icon {
  color: var(--fb-blue);
}

/* FOURTH MAJOR POST SUB COMPONENT */

.PostAddComment {
  display: flex;
  align-items: center;

  padding: 15px;
}

.comment-description {
  border-radius: 15px;
  width: 90%;
  padding: 5px 5px 5px 10px;
  background-color: var(--fb-lightGrey);
}
.postAddComment-user {
  margin-right: 15px;
}
.postAddComment-user img {
  width: 30px;

  border-radius: 50%;
  border: solid 1px rgba(99, 99, 99, 0.2);
}

.postAddComment-input {
  width: 90%;
}
.postAddComment-input input {
  border: none;
  outline: none;
  border-radius: 10px;
  padding: 5px;
  width: 100%;
  background-color: var(--fb-lightGrey);
}

